updated mappings and role based security