@@ -23,6 +23,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -48,30 +49,43 @@ public class WebSecurityConfig {
                 .authorizeHttpRequests(auth -> auth
                         // Public endpoints
                         .requestMatchers(
-                                "/api/auth/login",
-                                "/api/auth/refresh",
-                                "/api/auth/logout"
+                                "/api/auth/**",
+                                "/v3/api-docs/**",
+                                "/swagger-ui/**",
+                                "/swagger-ui.html"
                         ).permitAll()
 
                         // Admin-only endpoints
                         .requestMatchers(
                                 "/api/employees",
                                 "/api/employees/**",
-                                "/api/salaries",
-                                "/api/salaries/**",
-                                "/api/tasks",
-                                "/api/tasks/**",
-                                "/api/files/**"
+                                "/api/salaries/create",
+                                "/api/salaries/update/**",
+                                "/api/salaries/delete/**",
+                                "/api/tasks/create",
+                                "/api/tasks/update/**",
+                                "/api/tasks/delete/**"
                         ).hasRole("ADMIN")
 
                         // User-specific endpoints
                         .requestMatchers(
                                 "/api/profile/**",
-                                "/api/my-tasks/**",
-                                "/api/my-salary/**"
+                                "/api/tasks/me",
+                                "/api/tasks/status",
+                                "/api/salaries/me"
+                        ).hasRole("USER")
+
+                        // Shared endpoints (both ADMIN and USER)
+                        .requestMatchers(
+                                "/api/tasks",
+                                "/api/tasks/{id}",
+                                "/api/tasks/employee/**",
+                                "/api/salaries",
+                                "/api/salaries/{id}",
+                                "/api/salaries/employee/**"
                         ).hasAnyRole("ADMIN", "USER")
 
-                        // Any other request
+                        // Any other request needs to be authenticated
                         .anyRequest().authenticated()
                 );
 
@@ -100,8 +114,8 @@ public class WebSecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         configuration.setAllowedOrigins(List.of("http://localhost:3000"));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type", "X-Requested-With", "Accept"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With", "Accept"));
         configuration.setExposedHeaders(List.of("Authorization"));
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
